# clipsync

./: README.md  channels.py  protocol.py
clipsync/: .gitignore  PROJECT_STATUS.md  README.md  config.py  daemon.py  pyproject.toml  requirements.txt
clipsync/core/: _mdns.py  clipboard.py  crypto.py  pairing.py  transport.py
clipsync/platform/: darwin.py  linux.py
clipsync/ui/: menu_darwin.py  tray_linux.py
