[project]
name = "clipsync"
version = "0.1.0"
description = "Cross-OS clipboard sharing over LAN with encrypted channels"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=42.0",
]

[project.optional-dependencies]
macos = ["rumps>=0.4.0", "pyobjc-framework-Cocoa"]
linux = ["PySide6>=6.5"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["clipsync*"]
